# WormTracer

./: How to use WormTracer.ver17_5E.docx  README.md
Sample Images/: WT_estimated_centerline.avi  WT_grayscale.avi
WT18_5/WormTracer18_5/: README.md  pyproject.toml
WormTracer17_5/: How to use WormTracer.ver17_5J.docx  LICENSE.txt  WT17_5.ipynb  functions.py  wt17_5.py
WormTracer18_5/: LICENSE.txt  README.md  pyproject.toml  setup.py
WormTracer18_5/WormTracer/: WT18_5.ipynb  config.yaml  functions.py  wt.py
WormTracer18_5_2/: setup.py
WormTracer18_5_2/WormTracer/: wt.py
WormTracer19_1/: README.md  setup.py
WormTracer19_1/WormTracer/: WT19_1.ipynb  config.yaml  functions.py  wt.py
WormTracer19_3/: README.md  WT19_3_demo.ipynb  setup.py
WormTracer19_3/WormTracer/: WT19_3.ipynb  functions.py  wt.py
WormTracer19_5/: README.md  WT19_5_demo.ipynb  setup.py
WormTracer19_5/WormTracer/: WT19_5.ipynb  functions.py  wt.py
